@@ -1,3 +1,9 @@
+2015-04-09  Richard Biener  <rguenther@suse.de>
+
+	PR pch/65550
+	* files.c (pch_open_file): Allow main and pre-included files
+	when trying to open a PCH.
+
 2015-04-06  Jakub Jelinek  <jakub@redhat.com>
 
 	PR preprocessor/61977
